--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<html lang="zh-CN">
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- 使用圆形PNG图标 -->
+  <link rel="icon" type="image/png" href="/头像.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/头像.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/头像.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/头像.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#242424" />
+  <title>lanzhengpeng</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
